# llm_activity_labelling

./: .gitignore  README.md  llm_query.py  preprocess_osm_pois.py  pyproject.toml
activity_llm/: home_work.py  io.py  prompt_design.py  query_llm.py  surrounding_poi.py
tests/: run_test_kml.py
